# commander

./: .gitignore  CHANGELOG.md  CMakeLists.txt  ChangeLog  ChangeLog.md  README.md  channelForm.cpp  colors.h  commander  commander.cpp  commander.xmi  communicator.cpp  databases.cpp  databases.h  fields.cpp  fields.h  files.cpp  form.cpp  form.h  goals.txt  makefile  math.c  ncurses.c  printing.c  screen.c  tables.c  windows.h
Windows/: bannerBox.h  lcd.cpp  lcd.h  playlistBox.cpp  zoom.h
artext/: keys.txt
resources/: KEY_BINDINGS  commander  commander.xmi
src/: commander.cpp  commander.hpp  main.cpp  main.hpp
src/app/: main.cpp
src/common/: common.hpp  global.h  math.h  matroska.cpp  matroska.hpp  string.c  string.cpp  string.h  string.hpp
src/data/: Catalog.cpp  Catalog.hpp  Playlist.cpp  Playlist.hpp  catalog.cpp  catalog.hpp  combinations.cpp  combinations.hpp  databases.cpp  databases.cpp.old  databases.h  databases.hpp  files.cpp  files.hpp  playlist.cpp  playlist.hpp  tables.c  tables.cpp  tables.hpp
src/graphics/: channelForm.cpp  channelForm.hpp  digits.c  digits.cpp  fields.cpp  fields.h  fields.hpp  form.cpp  form.h  form.hpp  ncurses.c  ncurses.cpp  ncurses.hpp  orchestra.cpp  orchestra.hpp  popup.cpp  popup.hpp  printing.c  printing.cpp  printing.hpp  screen.c  screen.cpp  screen.hpp  ventana.cpp  ventana.hpp  window.cpp  window.hpp  windows.h  windows.hpp
src/graphics/elements/: text_popup.cpp  text_popup.hpp  window.cpp  window.hpp
src/graphics/elements/windows/: boxed_window.cpp  boxed_window.hpp  popup.cpp  popup.hpp
src/graphics/elements/windows/boxed_windows/: boxed_popup.cpp  boxed_popup.hpp
src/graphics/elements/windows/popups/: check_popup.cpp  check_popup.hpp  double_X_slider.cpp  double_X_slider.hpp  orchestra_element.cpp  orchestra_element.hpp  text_popup.cpp  text_popup.hpp
src/graphics/elements/windows/popups/orchestra_elements/: check_popup.cpp  check_popup.hpp  double_X_slider.cpp  double_X_slider.hpp  text_popup.cpp  text_popup.hpp
src/graphics/elements/windows/popups/orchestra_elements/text_popups/: field_popup.hpp
src/graphics/elements/windows/popups/text_popups/: field_popup.cpp  field_popup.hpp
src/graphics/popups/: orchestra.cpp  orchestra.hpp  text_popup.cpp  text_popup.hpp
src/graphics/windows/: bannerBox.cpp  playlistBox.h  queryBox.cpp  queryBox.hpp  resultsBox.cpp  resultsBox.hpp  zoom.cpp  zoomBox.cpp  zoomBox.h
src/midi/: Keyboard.cpp  Keyboard.hpp  audio.c  audio.cpp  audio.hpp  communicator.cpp  communicator.hpp  keyboards.cpp  keyboards.hpp  midi.hpp
src/ui/: Orchestra.cpp  Orchestra.hpp  colors.hpp  fields.cpp  fields.hpp  form.cpp  form.hpp  ncurses.cpp  ncurses.hpp  orchestra.cpp  orchestra.hpp  printing.cpp  printing.hpp  screen.cpp  screen.hpp
src/ui/elements/: window.cpp  window.hpp
src/ui/elements/windows/: boxed_window.cpp  boxed_window.hpp  popup.cpp  popup.hpp
src/ui/elements/windows/boxed_windows/: boxed_popup.cpp  boxed_popup.hpp
src/ui/elements/windows/popups/: orchestra_element.cpp  orchestra_element.hpp
src/ui/elements/windows/popups/orchestra_elements/: check_popup.cpp  check_popup.hpp  double_X_slider.cpp  double_X_slider.hpp  text_popup.cpp  text_popup.hpp
src/ui/elements/windows/popups/orchestra_elements/text_popups/: field_popup.cpp  field_popup.hpp
src/ui/pdf/: PDFViewer.cpp  PDFViewer.hpp
src/utilities/: revolver.hpp  timer.cpp  timer.hpp
src/utils/: Timer.cpp  environment.cpp  environment.hpp  string.cpp  string.hpp  timer.cpp
